<resources>
    <string name="app_name">FitnessApp</string>
    <string name="programs">Programs</string>
    <string name="indications">Indications</string>
    <string name="calculator">Calculator</string>
    <string name="articles">Articles</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="calculator_text">With the help of this calculator you can check if your weight is normal</string>
    <string name="weight">Enter your weight here</string>
    <string name="height">Enter your height here</string>
    <string name="count">Count</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pulse">Enter your pulse here</string>
    <string name="save">Save</string>
    <string name="create_graph">Create Graph of pulses for this month</string>
    <string name="add">Add</string>
    <string name="choose_the_section_you_need">Choose the section you need</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="title">Title</string>
    <string name="enter_the_content">Enter the content</string>
    <string name="content">Content</string>
    <string name="share">Share</string>
    <string name="your_articles">Your articles:</string>
    <string name="banner_ad_unit_id" />
    <string name="print">Print</string>
    <string name="screenshot">Screenshot</string>

    <string-array name="addVariants">
        <item>Article</item>
        <item>Program</item>
    </string-array>
</resources>
