<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndicationsFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/pulse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pulse"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pulse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/create_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_graph"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/save"
        android:layout_marginTop="16dp"/>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="224dp"
        android:layout_below="@+id/create_graph"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="68dp" />


</RelativeLayout>